# xbrd-gdsp-fknpft

./: .geminiignore  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  Makefile  README.md  important-note-on-concurrency.md
benches/: mailbox.rs
commands/: wwkd.md  xb.md  xbgst.md  xbreed-team.md  xbreed.md  xbt.md  xgs.md
config/: models.yaml  policy.yaml
data/: bench-phase-a.tsv  bench-phase-c.tsv  bench-quality.json  xbreed-schema.sql
docs/: SETUP.md  cli-contamination.md  command-flows.md  superpowers-xbgst-fit.md  swarm-test-flow.md  xask-protocol.md  xbrd-vs-hvm2-real-g-thang-2026-04-23.md
scripts/: bench-cell.sh  bench-collect.sh  bench-extract-proposals.py  bench-locate.py  bench-mailbox.sh  bench-metrics.py  gemini-switch  honcho  honcho-migrate-r2.sh  install-commands.sh  install-godspeed-always.sh  mutation-harbor-scaffold.sh  uninstall-godspeed-always.sh  uninstall-setup.sh  verify-docs.sh  verify-install.sh  verify-routing.sh  xask  xbreed-memory
src/: ask.rs  cli.rs  config.rs  guard.rs  launch.rs  lib.rs  loadout.rs  mailbox.rs  main.rs  precheck.rs  protocol.rs  sync.rs  team.rs
tests/: ask_with_loadout.rs  axis_family_schema_check.sh  bench_log_fixtures.sh  guard_policy.rs  mirror_drift_mutation.sh  precheck_pane_cap.rs  required_sections_mutation.sh  routing_drift_mutation.sh  ssot_build_binding.sh  swarm_doc_fixtures.sh  sync_claude.rs  timeout_reap.rs  xask_cross_model_divergence.sh  xask_dispatch_dir_guard.sh  xask_effort_substitution.sh  xask_failloud.sh  xask_full_flag.sh  xask_gemini_effort_transport.sh  xask_selfheal_smoke.sh  (+3 more)
(+140 files in other folders)
