[package]
name = "xbreed"
version = "0.4.0"
edition = "2021"
description = "Multi-model meta-launcher with shared safety policy"
license = "MIT OR Apache-2.0"

[lib]
name = "xbreed"
path = "src/lib.rs"

[[bin]]
name = "xbreed"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
